fix scrollbar

--- a/src/css/best-sellers.css
+++ b/src/css/best-sellers.css
@@ -264,4 +264,20 @@
   .label.discount.shifted {
     top: 45px;
   }
+
+  .swiper-scrollbar {
+    height: 4px;
+    background: #e3e3e3;
+    border-radius: 3px;
+    margin-top: 12px;
+  }
+  .swiper-scrollbar-drag {
+    background: #605e5c;
+    border-radius: 7px 0 0 7px;
+    height: 4px;
+    transition: background 0.3s;
+  }
+  .swiper-scrollbar-drag:hover {
+    background: #444;
+  }
 }
